# llvm-varname-pass

./: .clang-format  CMakeLists.txt  README.md
examples/: bar.ll  foo.c  foo.ll  foo.slim.ll  permute.cpp  permute.ll  permute.slim.ll
include/: VarNames.h
lib/: CMakeLists.txt  VarNames.cpp
